tests/fixtures/invalid/pow_int_set_list.py
# Cannot call pow() with Int, Set[int], List[int]
x = pow(1, {1, 2, 3}, [1, 2, 3])
